Wed Sep 13 18:17:30 1995  Theodore Y. Ts'o  <tytso@dcl>

	* alt_prof.c (krb5_read_realm_params): Fix memory leak.  Free the
		default realm when we're done.  Remove the "profile"
		parameter from the kdc.conf file.  This is bad idea,
		architecturally.

Tue Sep 12 13:18:42 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* adm_conn.c: For Macintosh hardwire cache name. Various casting
		fixes. 

Thu Sep  7 17:50:15 1995  Theodore Y. Ts'o  <tytso@dcl>

	* adm_conn.c (kadm_get_creds): Use KRB5_ADM_SERVICE_INSTANCE for
		the instance name, instead of KRB5_ADM_SERVICE_NAME.

Wed Sep 06 14:20:57 1995   Chris Provenzano (proven@mit.edu)

        * adm_kt_dec.c, adm_kt_enc.c, alt_prof.c, keysalt.c, str_conv.c : 
		s/keytype/enctype/g, s/KEYTYPE/ENCTYPE/g

Tue Sep 05 22:10:34 1995   Chris Provenzano (proven@mit.edu)

        * adm_kt_dec.c, adm_kt_enc.c, alt_prof.c, str_conv.c: 
		Remove krb5_enctype references, and replace 
		with krb5_keytype where appropriate

Tue Aug 29 15:31:50 EDT 1995	Paul Park	(pjpark@mit.edu)
	* .Sanitize, krb5strings.M - Add new manpage describing string syntax
		for common datatypes handled by str_conv.c.

Thu Aug 24 18:53:32 1995  Theodore Y. Ts'o  <tytso@dcl>

	* .Sanitize: Update file list

Mon Aug 21 17:07:56 EDT 1995	Paul Park	(pjpark@mit.edu)
	* str_conv.c - Add krb5_timestamp_to_sfstring().  This converts time
		to a short string, potentially filled.  Use strftime() for
		krb5_timestamp_to_string() if present so that locale-dependent
		time format is used.


Tue Aug 8 17:35:10 EDT 1995	Paul Park	(pjpark@mit.edu)
	* str_conv.c - Fix Purify complaint.


Mon Aug 7 17:38:45 EDT 1995	Paul Park	(pjpark@mit.edu)
	* keysalt.c(krb5_string_to_keysalt) - Don't do the silly whitespace
		filling logic.  If the string has imbedded whitespace, then
		it's just tough rocks.  Save replaced string separators and
		terminators so that they string looks the same coming out as
		going in.


Fri Aug 4 16:21:50 EDT 1995	Paul Park	(pjpark@mit.edu)